--- a/src/app/pages/admin/admin-user/admin-user.page.html
+++ b/src/app/pages/admin/admin-user/admin-user.page.html
@@ -51,19 +51,18 @@
               <ng-container matColumnDef="commands">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let user" class="commands">
-                  <ion-button size=small (click)="confirmUser(user, true)">
-                    <ion-icon slot="start" name="checkmark-outline"></ion-icon>
-                  </ion-button>
-                  <ion-button size=small color=danger (click)="confirmUser(user, false)">
-                    <ion-icon slot="start" name="close-outline"></ion-icon>
-                  </ion-button>
-                  <ion-button size=small (click)="deleteUser(user)">
-                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                  </ion-button>
+                  <ion-segment (ionChange)="statusChanged($event, user)">
+                    <ion-segment-button value="true">
+                      <ion-icon color=success name="checkmark-outline"></ion-icon>
+                    </ion-segment-button>
+                    <ion-segment-button value="false">
+                      <ion-icon color=danger name="close-outline"></ion-icon>
+                    </ion-segment-button>
+                  </ion-segment>
                 </td>
               </ng-container>
               <tr mat-header-row *matHeaderRowDef="displayedUserInactiveColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedUserInactiveColumns;"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedUserInactiveColumns;" (click)="onSelectUser(row)"></tr>
             </table>
           </ion-card-content>
         </ion-card>
@@ -96,4 +95,6 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <app-user-sheet [user]="selectedUser" [userState]="isUserSelected" (stateChangeEv)="isUserSelected=$event">
+  </app-user-sheet>
 </ion-content>
