factoriser sauvegarde moulage

--- a/src/app/pages/molding/create-molding/create-molding.page.html
+++ b/src/app/pages/molding/create-molding/create-molding.page.html
@@ -107,7 +107,7 @@
         <ion-icon slot="start" name="save-outline"></ion-icon>
         SAUVEGARDER
       </ion-button>
-      <ion-button slot=end (click)="printMoldingClick()" fill="solid" color=primary>
+      <ion-button slot=end (click)="saveMoldingClick(true)" fill="solid" color=primary>
         <ion-icon slot="start" name="print-outline"></ion-icon>
         IMPRIMER
       </ion-button>
