--- a/src/app/pages/tool-request/_components/spec-maintenance-reparation/spec-maintenance-reparation.component.html
+++ b/src/app/pages/tool-request/_components/spec-maintenance-reparation/spec-maintenance-reparation.component.html
@@ -1,102 +1,103 @@
 <div class="pdf page" id="toExport">
-    <ion-header>
-        <ion-grid fixed>
-            <ion-row>
-                <ion-col class="border" size="8">CAUSE DE LA DEMANDE : cocher la case correspondante</ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col class="border" size="2">Qualité</ion-col>
-                <ion-col class="border" size="2">Arrêt de chaine</ion-col>
-                <ion-col class="border" size="2">Dév</ion-col>
-                <ion-col class="border" size="2">amelio continue</ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col class="border" size="2"></ion-col>
-                <ion-col class="border" size="2"></ion-col>
-                <ion-col class="border" size="2"></ion-col>
-                <ion-col class="border" size="2"></ion-col>
-            </ion-row>
-        </ion-grid>
-        <ion-grid fixed class="table">
-            <ion-row>
-                <ion-col class="border" size="2">Direction Qualité</ion-col>
-                <ion-col class="border" size="7">
-                    <ion-row>
-                        <ion-col size="12"></ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12"> DEMANDE D'ACTION CORRECTIVE/REPARATION OUTILLAGE</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12"></ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12"> Désignation outillage: {{toolRequest.maintenance?.outillage?.designation}}</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12"> Référence outillage: {{toolRequest.maintenance?.outillage?.identification}}</ion-col>
-                    </ion-row>
-                </ion-col>
-                <ion-col class="border" size="3">
-                    <ion-row>
-                        <ion-col size="12">Diffusion: Service outillage</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12"></ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12">N° d'OT SAP : OT{{toolRequest.maintenance?.outillage?.sapToolNumber}}</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="6">Emetteur : {{toolRequest.maintenance.userCreat.username}}</ion-col>
-                        <ion-col size="6">Sigle : </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="12">Le : {{toolRequest.createdAt | date:"dd/MM/yyyy"}}</ion-col>
-                    </ion-row>
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-header>
-    <ion-content>
-        <ion-grid fixed class="table">
-            <ion-row>
-                <ion-col class="border" size="1">Rep.</ion-col>
-                <ion-col class="border" size="3">NON CONFORMITES</ion-col>
-                <ion-col class="border" size="3">ACTIONS CORRECTIVES</ion-col>
-                <ion-col class="border" size="1">Responsable A.C.</ion-col>
-                <ion-col class="border" size="1">Délai A.C.</ion-col>
-                <ion-col class="border" size="3">
-                    <ion-row>
-                        <ion-col size="12">Réalisation</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size="6">Date</ion-col>
-                        <ion-col size="6">Visa</ion-col>
-                    </ion-row>
-                </ion-col>
-            </ion-row>
-            <ion-row *ngFor="let maintenaceItem of toolRequest.maintenance.itemActionCorrective.reverse()">
-                <ion-col class="border" size="1">{{maintenaceItem.rep}}</ion-col>
-                <ion-col class="border" size="3">{{maintenaceItem.nonConformite}}</ion-col>
-                <ion-col class="border" size="3">{{maintenaceItem.actionsCorrectives}}</ion-col>
-                <ion-col class="border" size="1">{{maintenaceItem.respo}}</ion-col>
-                <ion-col class="border" size="1">{{maintenaceItem.delaiAction | date:"dd/MM/yy"}}</ion-col>
-                <ion-col class="border" size="1">{{maintenaceItem.dateReal | date:"dd/MM/yy"}}</ion-col>
-                <ion-col class="border" size="1">{{maintenaceItem.userReal}}</ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-content>
-    <ion-footer>
-        <ion-grid fixed class="border footer">
-            <ion-row>
-                <ion-col size="4">Attestation de conformité : Visa Qualité </ion-col>
-                <ion-col size="4">Date :</ion-col>
-                <ion-col size="4">Archivage : Ligne Outillage</ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col size="12">Après réalisation des travaux, attestation de conformité et archivage DIAE/RO, retour au demandeur</ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-footer>
+  <ion-header>
+    <ion-grid fixed>
+      <ion-row>
+        <ion-col class="border" size="8">CAUSE DE LA DEMANDE : cocher la case correspondante</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="border" size="2">Qualité</ion-col>
+        <ion-col class="border" size="2">Arrêt de chaine</ion-col>
+        <ion-col class="border" size="2">Dév</ion-col>
+        <ion-col class="border" size="2">amelio continue</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="border" size="2"></ion-col>
+        <ion-col class="border" size="2"></ion-col>
+        <ion-col class="border" size="2"></ion-col>
+        <ion-col class="border" size="2"></ion-col>
+      </ion-row>
+    </ion-grid>
+    <ion-grid fixed class="table">
+      <ion-row>
+        <ion-col class="border" size="2">Direction Qualité</ion-col>
+        <ion-col class="border" size="7">
+          <ion-row>
+            <ion-col size="12"></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12"> DEMANDE D'ACTION CORRECTIVE/REPARATION OUTILLAGE</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12"></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12"> Désignation outillage: {{toolRequest.maintenance?.OT?.designation}}</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12"> Référence outillage: {{toolRequest.maintenance?.OT?.identification}}</ion-col>
+          </ion-row>
+        </ion-col>
+        <ion-col class="border" size="3">
+          <ion-row>
+            <ion-col size="12">Diffusion: Service outillage</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12"></ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">N° d'OT SAP : OT{{toolRequest.maintenance?.OT?.sapToolNumber}}</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="6">Emetteur : {{toolRequest.maintenance.userCreat.username}}</ion-col>
+            <ion-col size="6">Sigle : </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12">Le : {{toolRequest.createdAt | date:"dd/MM/yyyy"}}</ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-header>
+  <ion-content>
+    <ion-grid fixed class="table">
+      <ion-row>
+        <ion-col class="border" size="1">Rep.</ion-col>
+        <ion-col class="border" size="3">NON CONFORMITES</ion-col>
+        <ion-col class="border" size="3">ACTIONS CORRECTIVES</ion-col>
+        <ion-col class="border" size="1">Responsable A.C.</ion-col>
+        <ion-col class="border" size="1">Délai A.C.</ion-col>
+        <ion-col class="border" size="3">
+          <ion-row>
+            <ion-col size="12">Réalisation</ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="6">Date</ion-col>
+            <ion-col size="6">Visa</ion-col>
+          </ion-row>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngFor="let maintenaceItem of toolRequest.maintenance.itemActionCorrective.reverse()">
+        <ion-col class="border" size="1">{{maintenaceItem.rep}}</ion-col>
+        <ion-col class="border" size="3">{{maintenaceItem.nonConformite}}</ion-col>
+        <ion-col class="border" size="3">{{maintenaceItem.actionsCorrectives}}</ion-col>
+        <ion-col class="border" size="1">{{maintenaceItem.respo}}</ion-col>
+        <ion-col class="border" size="1">{{maintenaceItem.delaiAction | date:"dd/MM/yy"}}</ion-col>
+        <ion-col class="border" size="1">{{maintenaceItem.dateReal | date:"dd/MM/yy"}}</ion-col>
+        <ion-col class="border" size="1">{{maintenaceItem.userReal}}</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
+  <ion-footer>
+    <ion-grid fixed class="border footer">
+      <ion-row>
+        <ion-col size="4">Attestation de conformité : Visa Qualité </ion-col>
+        <ion-col size="4">Date :</ion-col>
+        <ion-col size="4">Archivage : Ligne Outillage</ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">Après réalisation des travaux, attestation de conformité et archivage DIAE/RO, retour au
+          demandeur</ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-footer>
 </div>
