--- a/src/app/composants/shared-user-header/shared-user-header.component.html
+++ b/src/app/composants/shared-user-header/shared-user-header.component.html
@@ -6,6 +6,7 @@
       </ion-img>
     </ion-buttons>
     <ion-title class="ion-text-uppercase ion-text-center">{{pageTitle}}</ion-title>
+    <ion-label slot=end class="dev">{{envMode}}</ion-label>
     <ion-chip id="button-profil" color=light slot=end class=ion-margin-end outline
       (click)="isPopoverOpen=!isPopoverOpen">
       <ion-icon name="person-circle-outline"></ion-icon>
