--- a/src/app/composants/shared-user-header/shared-user-header.component.scss
+++ b/src/app/composants/shared-user-header/shared-user-header.component.scss
@@ -11,3 +11,10 @@
     display: none;
   }
 }
+.dev {
+  color: red;
+  text-transform: uppercase;
+  font-size: large;
+  font-weight: bold;
+  padding-right: 100px;
+}
