--- a/src/app/pages/tool-request/_components/control3-d/control.page.html
+++ b/src/app/pages/tool-request/_components/control3-d/control.page.html
@@ -74,7 +74,7 @@
             </ion-label>
             <editor slot="" formControlName="ctrlReasons" [init]="{
                       plugins: 'lists link image table wordcount',
-                      base_url: '/tinymce',
+                      base_url: 'tinymce',
                       suffix: '.min',
                       menubar: false,
                       statusbar:false
